third_party/move/move-compiler-v2/tests/op-equal/invalid4.exp

Diagnostics:
error: unexpected token
  ┌─ tests/op-equal/invalid4.move:3:15
  │
3 │         let x += 1;
  │               ^^
  │               │
  │               Unexpected '+='
  │               Expected ';'
