third_party/move/move-compiler-v2/tests/op-equal/invalid4.move
module 0x42::test {
    fun test() {
        let x += 1;
    }
}
